# Thimbl-CLI

./: .gitignore  INSTALL  LISP  Makefile.am  PYDOC  README  TODO  configure.ac  eproject  example-plan.txt  granch.rb  gthimbl.py  ossa  setup.py  sitt.py  thcreate  thimbl  thimbl.lisp  thimbl.py  thimbl.wxg  thimbl.xrc  thindex  thingerd.py
attic/: thfetch  thfollow  thfollowing  thimbl  thimbl.bat  thimbl.lisp  thpost  thpublish
daemon/: .gitignore  README  kill-thimbld  launch-thimbld  thimbld.c
doc/: Makefile.am  README  plan.rst  thimbl.rst  thingerd.rst
examples/: example-finger.txt  profile-ossa.txt  profile-test.txt
htm/: index.html
lisp/: project.el  thimbl.lisp
website/: admin.html  index.html
website/rst/: CMakeList.txt
