#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([thimbl, 0.0, mcturra2000@yahoo.co.uk)
#AC_CONFIG_SRCDIR([daemon/thimbld.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
#AC_PROG_CC

# Checks for libraries.

# Checks for header files.
#AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
